--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>webpage test</title>
+	</head>
 	<body>
-    hello world
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>test!</h1>
+				<p>test</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
 	</body>
-	
 </html>
